feat: Word Pool feature parity + filter fixes + test updates
- VocabularyScreen: dual view modes (list/flashcard), swipe actions, batch marking
- Backend: true pagination, onlyUnknown filter in DB query, search filter support
- Fixed WordServiceTest, ProgressServiceTest, StudyServiceTest compilation errors
- Cache invalidation for frequent words on mark known
- Added GestureHandlerRootView, AddToListModal, Study button